[metadata]
name = modal-manager-backend
summary = Model Manager RestAPI
description-file =
    README.rst
author = Ekaterina Chernova
author-email = echernova@mirantis.com
home-page = https://github.com/salt-formulas/django-model-manager
classifier =
    Development Status :: 1 - Planning
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: OpenStack
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Internet :: WWW/HTTP

[aliases]
test=pytest

[tool:pytest]
python_files=test_*.py *tests.py

[flake8]
ignore = E501
max-line-length = 160
exclude =
	.tox,
	.travis,
	docs,
	*/migrations/*.py,
	./.git/,
	./deploy/,
	./media/,
	./.cache/,
	./scripts,
	__pycache__,
	devenv.py,
	./.eggs/,
	./venv/
